unpackaged/main/default/objects/Gearset_employee__c/fields/Age_c__c.field-meta.xml
<CustomField>
    <fullName>Age_c__c</fullName>
    <label>Age__c</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>