unpackaged/main/default/objects/Gearset_employee__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pie</fullName>
            </value>
            <value>
                <fullName>Dumpling</fullName>
            </value>
            <value>
                <fullName>Salad</fullName>
            </value>
            <value>
                <fullName>Chocolate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>