unpackaged/main/default/objects/Gearset_employee__c/validationRules/Age_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_check</fullName>
    <active>true</active>
    <description>Checking Age is under 122</description>
    <errorConditionFormula>Age__c  &lt;= 122</errorConditionFormula>
    <errorMessage>Too old.</errorMessage>
</ValidationRule>