unpackaged/main/default/objects/Gearset_employee__c/validationRules/CheckValidAge.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckValidAge</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &gt; 122</errorConditionFormula>
    <errorMessage>Age is greater than 122</errorMessage>
</ValidationRule>