unpackaged/main/default/objects/Gearset_employee__c/validationRules/TooOld.validationRule-meta.xml
<ValidationRule>
    <fullName>TooOld</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &gt; 122</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>Too old, please retire</errorMessage>
</ValidationRule>